# stock-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  Agentic_Dev_Prompts_Index.md  Agentic_Dev_Prompts_Phase0_Phase1.md  Agentic_Dev_Prompts_Phase2_Agents.md  Agentic_Dev_Prompts_Phase3_Phase4_Tests.md  Makefile  Stock_Analyst_AI_Architecture.md  Stock_Analyst_Development_Plan.md  alembic.ini  package-lock.json  package.json
.claude/: settings.json
.gitea/workflows/: ci.yml
apps/api/: db.py  main.py  pyproject.toml
apps/api/middleware/: auth.py  tenant.py
apps/api/routers/: admin.py  coverages.py  documents.py  health.py  industries.py  outputs.py  tasks.py
apps/api/services/: storage.py
apps/api/tasks/: ingestion.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: providers.tsx
apps/web/lib/: api-server.ts  api.ts  auth-options.ts  industry-primer.ts  types.ts  (+1 more)
infra/: docker-compose.yml  kpi_definitions.yaml
infra/keycloak/: realm-export.json
infra/litellm/: config.yaml
migrations/: README  env.py
migrations/versions/: 001_initial_schema.py  002_research_output_metadata.py
scripts/: seed_dev.py  setup_minio.py
tests/integration/: test_auth.py  test_kpi_tracker.py  test_retriever.py
tests/unit/: test_chunker.py  test_citation_enforcer.py  test_financial_normalizer.py  test_hybrid_retriever.py  test_industry_analyst.py  test_langgraph_graph.py  test_lynch_pitch_agent.py  test_orchestrator_agent.py  test_pdf_parser.py  test_sec_edgar.py  test_storage.py  test_table_extractor.py
(+29 files in other folders)
