[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for the Stock Analyst platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "pydantic-settings",
    "structlog",
    "flower",
    # async database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    # HTTP client (JWKS fetch, health checks)
    "httpx>=0.27",
    # Redis health check (asyncio support is built-in since redis>=4.2)
    "redis>=5.0",
    # MinIO object storage client
    "minio>=7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
